# Cynthia-engine

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  README.MD  bananen.json  biome.json  build.rs  bun.lockb  changelog.md  cynthiapmanifest.json  main.js  pack.sh  package-lock.json  package.json  pnpm-lock.yaml  rome.json  todo.md  tsconfig.json  win.cmd
.github/workflows/: node.js.yml  rust-clippy.yml
clean_config/: Cynthia.toml
clean_slate/: GETTINGSTARTED.MD  README.MD  pack.sh  reset.sh
clean_slate/_cynthia/: cynthiameta.jsonc
clean_slate/_cynthia/config/modes/: default.jsonc
clean_slate/_cynthia/files/styles/: cynthia.css
clean_slate/_cynthia/files/templates/: cynthia-docs.handlebars  default.handlebars
clean_slate/cynthiaFiles/: published.jsonc
clean_slate/cynthiaFiles/modes/: default.jsonc
clean_slate/cynthiaFiles/styles/: cynthia.css  default.css
clean_slate/cynthia_config/modes/: default.jsonc
clean_slate/cynthia_config/styles/: cynthia.css  default.css
clean_slate/cynthia_config/templates/: cynthia-docs.handlebars  default.handlebars
clean_slate/pages/: index.md
clean_slate/site/: published.jsonc
cleansheet/: tnjndjkfn.txt
cleansheet/cynthiaFiles/: published.jsonc
cleansheet/cynthiaFiles/assets/scripts/: client.js
cleansheet/cynthiaFiles/assets/styles/: default.css
cleansheet/cynthiaFiles/publications/: hello-world.md
cleansheet/cynthiaFiles/templates/page/: default.hbs
cleansheet/cynthiaFiles/templates/post/: default.hbs
cleansheet/cynthiaFiles/templates/postlist/: default.hbs
docs/: features.md  jsr.md  readme.md
docs/Admins/configuration/: CynthiaConf.md
docs/Admins/configuration/CynthiaConf/: scenes.md
docs/Admins/customisation/: templates.md
docs/Admins/publication/published.jsonc/: object-dates.md
docs/Developers/Plugin/: apis.md
docs/configuration/: published.jsonc.md
docs/configuration/Cynthia.toml/: scenes.md
docs/configuration/published.jsonc/: object-content.md
docs/customisation/templates/: index.md
docs/published.jsonc/: object-content.md
plugins/: EXAMPLES.md  README.MD
plugins/hlimg-cynthia/: index.js  package-lock.json  package.json
source/Dash/: readme.md
source/Main/: cache.rs  config.rs  dash.rs  externalpluginservers.rs  files.rs  helpers.rs  jsrun.rs  main.rs  publications.rs  renders.rs  requestresponse.rs
source/Main/config/: actions.rs
source/Main/src/: config.rs  externalpluginservers.rs  files.rs  jsrun.rs  main.rs  publications.rs  renders.rs  requestresponse.rs  tell.rs
source/Plugin-runners/node-plugin-api/: main.ts  package.json  package.plugin.schema.json  tsconfig.json
source/Plugin-runners/node-plugin-runner/src/: handler.ts  main.ts
source/Plugin-runners/node-plugin-runner/src/types/: config.ts  internal_plugins.ts
src/: client.js  config.rs  contentservers.rs  dash.rs  dashfunctions.rs  externalpluginservers.rs  files.rs  generations.rs  init.rs  jsr.rs  jsrun.rs  jsruntime.rs  logger.rs  main.rs  main.ts  publications.rs  renders.rs  requestresponse.rs  structs.rs  subcommand.rs  tell.rs
src-js/: main.js
src/contentservers/: combiner.rs  postlists.rs
