[package]
name = "cynthiaweb"
description = "A simple web server and generator based on plain file editing. I hate WordPress."
documentation = "https://cynthia-docs.strawmelonjuice.com/"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
version = "2.0.1-alpha.1"
edition = "2021"
license = "GPL-3.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"
colored = "2.0.4"
dotenv = "0.15.0"
handlebars = "4.5.0"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
markdown = "1.0.0-alpha.16"
curl = "0.4.44"
flate2 = "1.0.28"
tar = "0.4.40"
fs_extra = "1.3.0"
mime = "0.3.17"
time = { version = "0.3.11", features = ["formatting"] }
rand = "0.8.5"
urlencoding = "2.1.3"
