[package]
name = "cynthiaweb"
description = "A simple web server and generator based on plain file editing. I hate WordPress."
documentation = "https://cynthia-docs.strawmelonjuice.com/"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
version = "2.1.4-alpha.0.2"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.29"
colored = "2.0.4"
handlebars = "5.0.0"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
markdown = "1.0.0-alpha.16"
curl = "0.4.44"
flate2 = "1.0.28"
tar = "0.4.40"
fs_extra = "1.3.0"
mime = "0.3.17"
time = { version = "0.3.11", features = ["formatting"] }
urlencoding = "2.1.3"
normalize-path = "0.2.1"
random-string = "1.1.0"
toml = "0.8.11"
strip-ansi-escapes = "0.2.0"
