[package]
name = "cynthiaweb"
description = "A simple web server and generator based on plain file editing. I hate WordPress."
documentation = "https://cynthia-docs.strawmelonjuice.com/"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
version = "3.0.0-alpha"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cynthiaweb"
path = "./source/Main/main.rs"

[features]
default = ["node"]
node = []

[dependencies]
futures = "0.3.30"
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.29"
colored = "2.0.4"
chrono = "0.4.38"
simplelog = "0.12.2"
indicatif = "0.17.8"
log = "0.4.21"
handlebars = "6.0.0"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
boa_engine = "0.19.0"
markdown = "1.0.0-alpha.18"
curl = "0.4.44"
flate2 = "1.0.28"
tar = "0.4.40"
fs_extra = "1.3.0"
mime = "0.3.17"
time = { version = "0.3.11", features = ["formatting"] }
serde_json = "1.0.120"
urlencoding = "2.1.3"
normalize-path = "0.2.1"
random-string = "1.1.0"
toml = "0.8.11"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.38.0", features = [
    "rt",
    "rt-multi-thread",
    "process",
    "macros",
    "time",
] }
termsize = "0.1"
async-std = "1.12.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
interactive_process = "0.1.3"
